fix account-change text overflowing outside menu

--- a/styles/_basic.scss
+++ b/styles/_basic.scss
@@ -357,6 +357,7 @@ nav.sidebar {
     padding: 0.5em;
     line-height: 1.5;
     word-wrap: break-word;
+    word-break: break-all;
 }
 
 .close-btn svg {
